fix(auth): align document authorization across APIs
Apply standard entity CRUD privileges with MANAGE_DOCUMENTS as an additional allowance, while preserving strict read-only bridge inheritance and existence-aware ingest authorization.

Co-authored-by: Cursor <cursoragent@cursor.com>